testsuite/tests/partial-sigs/should_compile/T16334.hs
{-# LANGUAGE PartialTypeSignatures, NoStarIsType #-}

module T16334 where

k :: (Int :: _t)
k = 42
